--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 section {
-    border : 1px dashed burlywood;
+    border : 1px dashed darkgreen;
     padding: 20px;
     margin: 20px;
 }
