--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
     display: none;
 }
 
-section {
+section, fieldset {
     border : 1px dashed darkgreen;
     padding: 20px;
     margin: 20px;
@@ -96,18 +96,3 @@ img {
     width: 20px;
 }
 
-.modal-wrapper {
-    position: fixed;
-    font-family: Arial, Helvetica, sans-serif;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(0,0,0,0.8);
-    z-index: 99999;
-    -webkit-transition: opacity 400ms ease-in;
-    -moz-transition: opacity 400ms ease-in;
-    transition: opacity 400ms ease-in;
-    display: none;
-    pointer-events: none;
-}
