--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ caption {
     padding: 10px 0px 20px 0px;
 }
 
-li > a {
+li > a.mainMenu {
     text-decoration: none;
     display: block;
     color: #6f6f6f;
